<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">行运餐厅</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="resturant_events">餐厅活动</string>
    <string name="book_order">我要订餐</string>
    <string name="profile">个人中心</string>
    <string name="resturant_info">餐厅详情</string>
    <string name="back">\u0020\u0020返回</string>
	<string name="next">下一步</string>
	<string name="confirm_order">确认订单</string>
	<string name="dishes">菜品</string>
	<string name="order_dish">点菜</string>
	<string name="dish_ordered">已点</string>
	<string name="dish_list">菜单</string>
	<string name="dish_all">全部</string>
	<string name="dish_cold">正餐</string>
	<string name="dish_hot">沙拉</string>
	<string name="dish_other">其他</string>
	<string name="book_resturant">预订餐厅</string>
	<string name="map">餐厅地图</string>
	<string name="modify_password">修改密码</string>
	<string name="submit">提交</string>
	<string name="old_password">旧密码: </string>
	<string name="new_password">新密码: </string>
	<string name="retype">再输一遍:  </string>
	<string name="my_order">历史订单</string>
	<string name="take_order">下单</string>
	<string name="submit_order">提交订单</string>
	<string name="order_info">订单信息</string>
	<string name="customer_name">顾客姓名：</string>
	<string name="telephone">联系方式：</string>
	<string name="guest_number">用餐人数：</string>
	<string name="is_vip">是否包厢：</string>
	<string name="arrival_date">到店日期：</string>
	<string name="arrival_time">到店时间：</string>
	<string name="requirements">特殊要求</string>
	<string name="resturant_introduction">餐厅介绍</string>
	<string name="resturant_overall">我要订餐</string>
	<string name="logout">退出登录</string>
	<string name="loading">加载中</string>
	<string name="failed_to_get_data">获取网络内容失败</string>
	<string name="add_to_cart_succeed">点菜成功</string>
	<string name="order_dishes_result">订餐结果</string>
	<string name="order_dishes_succeed">操作成功，稍后会有工作人员与您联系</string>
	<string name="finish">完成</string>
	<string name="plz_check_input">请检查输入是否完整</string>
	<string name="login">登录</string>
	<string name="username">用户名：</string>
	<string name="cellphone">手机号码：</string>
	<string name="customername">姓名：</string>
	<string name="password">密码：</string>
	<string name="wrong_username_or_password">用户名或密码错误</string>
	<string name="signup">注册</string>
	<string name="repeat">重复：</string>
	<string name="different_password">两次密码输入不一致</string>
	<string name="realname">称谓</string>
	<string name="empty_username">用户名不能为空</string>
	<string name="empty_realname">称谓不能为空</string>
	<string name="empty_password">密码不能为空</string>
	<string name="all_dishes">所有菜品</string>
	<string name="resturant_phone_number">联系电话：0966-2218222</string>
	<string name="username_taken">用户名已被占用</string> 
	<string name="input_phone_number">输入您下单时候的手机号码查询历史订单</string>
	<string name="plz_input_phone_number">请输入电话号码</string>
	<string name="my_dishes">菜品详情</string>
	<string name="bad_guest_number">人数输入有误</string>
		 
	<string name="sample_str1">请确认您要点的菜品 一共元</string>
	<string name="sample_str2">菜品名称</string>
	<string name="sample_str3">菜品价格</string>
	<string name="sample_str4">共电菜2道</string>
	<string name="sample_str5">一共55元</string>
	<string name="sample_str6"><![CDATA[行运西餐成立于2010年5月161日，是位于库尔勒市人民东路银星大酒店B座一楼的休闲清真餐厅，订餐电话是：0996-2218222，餐厅经营范围是：西餐：牛扒、比
萨、意面、咖啡、进口酒水、私房菜、各类下午茶，行运西餐是上岛咖啡附属品牌，连锁店面，同属一家公司，只是风格不同我们的理念是：源于自然的时尚生活我们的信念是：\n
\u0020\u0020\u0020\u0020我们的企业是本行业最优秀的；\n
\u0020\u0020\u0020\u0020我是这个企业里最优秀的一员；\n
\u0020\u0020\u0020\u0020对于咖啡、西餐、服务之道；\n
\u0020\u0020\u0020\u0020我最具有发言权；\n
\u0020\u0020\u0020\u0020我们充满热情的迎接每一天；\n
\u0020\u0020\u0020\u0020我们期盼彼此健康、充实而快乐；\n
\u0020\u0020\u0020\u0020我们的工作具有崇高的意义；\n
\u0020\u0020\u0020\u0020帮助别人，提升自己; \n
\u0020\u0020\u0020\u0020深怀感恩之心；\n
\u0020\u0020\u0020\u0020对待顾客、关爱同事; \n
\u0020\u0020\u0020\u0020快乐工作、快乐生活]]>
	</string>
</resources>