<?xml version="1.0" encoding="utf-8"?>
<!-- 餐厅详情页 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resturant_introduction"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/theme_color"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/nav_button_back"
                android:text="@string/back"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" 
        >

        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/xingyun_intro" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="false"
                android:text="@string/sample_str6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>