<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#8B2252"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_password"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#8B2252"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/nav_button_back"
                android:text="@string/back"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_next"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/nav_button_next"
                android:text="@string/submit"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.xingyun.excontrol.RoundedRectTableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/old_password"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="180dp"
                        android:layout_height="38dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="2dp"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:layout_height="1px"
                    android:background="#BDBDBD" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_span="2"
                        android:text="" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/new_password"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="180dp"
                        android:layout_height="38dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="2dp"
                        android:inputType="textPassword" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_height="1px"
                    android:background="#BDBDBD" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_span="2"
                        android:text="" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/retype"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="180dp"
                        android:layout_height="38dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="2dp"
                        android:ems="10"
                        android:inputType="textPassword" >
                    </EditText>
                </TableRow>
            </com.xingyun.excontrol.RoundedRectTableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>