<?xml version="1.0" encoding="utf-8"?>
<!-- 用户信息页 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#8B2252"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.xingyun.excontrol.RoundedRectTableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TableRow
                    android:id="@+id/tr_myorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/my_order"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_height="1px"
                    android:background="#BDBDBD" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_span="2"
                        android:text="" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tr_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/modify_password"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_height="1px"
                    android:background="#BDBDBD" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_span="2"
                        android:text="" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tr_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/logout"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </TableRow>
            </com.xingyun.excontrol.RoundedRectTableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>