<?xml version="1.0" encoding="utf-8"?>
<!-- 注册页 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <com.xingyun.excontrol.RoundedRectTableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/cellphone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/txt_cellphone"
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="2dp"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_height="1px"
                android:background="@color/theme_color" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_span="2"
                    android:text="" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/customername"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/txt_contactname"
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="2dp"
                    android:inputType="text" >
                </EditText>
            </TableRow>

            <TableRow
                android:layout_height="1px"
                android:background="@color/theme_color" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_span="2"
                    android:text="" >
                </TextView>
            </TableRow>
   <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="2dp"
                    android:inputType="text" >
                </EditText>
            </TableRow>

            <TableRow
                android:layout_height="1px"
                android:background="@color/theme_color" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_span="2"
                    android:text="" >
                </TextView>
            </TableRow>
          
        </com.xingyun.excontrol.RoundedRectTableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>